Updated the webservice

--- a/app/app.html
+++ b/app/app.html
@@ -133,9 +133,9 @@
                 <p style="display:inline-block;"><div class="referenceMarkerLegend Ath"></div>Backward citations (papers the highlighted item has cited).</p>
                 <p style="display:inline-block;"><div class="interactionMarkerLegend NotAth"></div>Papers that have been referenced outside the Arabidopsis community.</p>
 
-                <p style="display:inline-block;"><img src="http://bar.utoronto.ca/~jwaese/50YearsOfArabidopsis/images/nonAthCitations.png" style="margin-right:5px;">Non-Arabidopsis citations.</p>  
+                <p style="display:inline-block;"><img src="http://bar.utoronto.ca/webservices/araport/50Years/nonAthCitations.png" style="margin-right:5px;">Non-Arabidopsis citations.</p>  
 
-                <p style="display:inline-block;"><img src="http://bar.utoronto.ca/~jwaese/50YearsOfArabidopsis/images/citationIndicator.png" style="margin-right:5px;">Horizontal line indicates the log2 of the number of citations.</p>  
+                <p style="display:inline-block;"><img src="http://bar.utoronto.ca/webservices/araport/50Years/citationIndicator.png" style="margin-right:5px;">Horizontal line indicates the log2 of the number of citations.</p>  
 
                 <p style="display:inline-block; font-weight: bold; margin-top:10px;">Papers are coloured according to the concept codes listed below.</p>  
             </div>
