Worked on minor version related bugs.

--- a/index.html
+++ b/index.html
@@ -77,12 +77,9 @@
   <script src="/lib/test-runner.js"></script>
 
   <!-- bower:js -->
-  <script src="bower_components/d3/d3.js"></script>
-  <script src="bower_components/d3-tip/index.js"></script>
-  <script src="bower_components/jquery-ui/jquery-ui.js"></script>
   <!-- endbower -->
   <!-- araport_dep:js -->
-  <script src="app/scripts/main.js"></script>  
+  <script src="app/scripts/pace.min.js"></script>  <script src="app/scripts/jquery.min.js"></script>  <script src="app/scripts/jquery-ui.js"></script>  <script src="app/scripts/d3.v3.min.js"></script>  <script src="app/scripts/d3.tip.v0.6.3.js"></script>  <script src="app/scripts/main.js"></script>  
   <!-- endaraport_dep -->
 
   <!-- application code -->
